React integrated in Spring-boot

--- a/react-web/package.json
+++ b/react-web/package.json
@@ -13,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +27,11 @@
   ],
   "devDependencies": {
     "shave": "^2.5.4",
-    "babel-loader": "8.0.4"
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0"
   }
 }
