Added test data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath*:database/db_create_tables.sql
+#spring.sql.init.data-locations=classpath*:database/db_fill.sql
