Minor structure changes

--- a/react-web/package.json
+++ b/react-web/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
+    "watch": "webpack --watch -d --output ../src/main/resources/static/react-app.js"
   },
   "eslintConfig": {
     "extends": "react-app"
