--- a/react-web/package.json
+++ b/react-web/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "moment": "^2.23.0",
     "react": "^16.10.1",
@@ -32,6 +34,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "antd": "4.16.13"
   }
 }
